src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>ContactType__c</fullName>
        <inlineHelpText>The Contact Type will help the system to match the Non Display Material for a Distribution</inlineHelpText>
        <label>Contact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ContactType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedItemType__c</fullName>
        <label>Excluded Item Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ItemType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedPatientType__c</fullName>
        <label>Excluded Patient Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PatientType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedProductType__c</fullName>
        <label>Excluded Product Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ProductType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExcludedTopic__c</fullName>
        <label>Excluded Topic</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Topic</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>F</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GraduationYear__c</fullName>
        <label>Graduation Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KeyInformation__c</fullName>
        <label>Key Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Language</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>NumberPrescription__c</fullName>
        <label>Number of prescriptions / Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OID__c</fullName>
        <description>Used for admin purposes only, to be kept hidden by default</description>
        <label>OID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PrimaryContact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Room__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Room</label>
        <referenceTo>Room__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Interest__c</fullName>
        <label>Secondary Interest</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Aboriginal Health</fullName>
                </value>
                <value>
                    <fullName>Acupuncture</fullName>
                </value>
                <value>
                    <fullName>Addiction Medicine</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
                <value>
                    <fullName>AIDS/HIV</fullName>
                </value>
                <value>
                    <fullName>Allergy</fullName>
                </value>
                <value>
                    <fullName>Allergy &amp; Immunology</fullName>
                </value>
                <value>
                    <fullName>Alternative Medicine</fullName>
                </value>
                <value>
                    <fullName>Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Asthma</fullName>
                </value>
                <value>
                    <fullName>Aviation</fullName>
                </value>
                <value>
                    <fullName>Bariatric Medicine</fullName>
                </value>
                <value>
                    <fullName>Botox &amp; Fillers</fullName>
                </value>
                <value>
                    <fullName>Brain Injury Rehabilitation</fullName>
                </value>
                <value>
                    <fullName>Cardiology</fullName>
                </value>
                <value>
                    <fullName>Chronic Obstructive Pulmonary Disease</fullName>
                </value>
                <value>
                    <fullName>Chronic Pain</fullName>
                </value>
                <value>
                    <fullName>Clinical Immunology &amp; Allergy</fullName>
                </value>
                <value>
                    <fullName>Community Medicine</fullName>
                </value>
                <value>
                    <fullName>Cosmetics</fullName>
                </value>
                <value>
                    <fullName>Critical Care Medicine</fullName>
                </value>
                <value>
                    <fullName>Dermatology</fullName>
                </value>
                <value>
                    <fullName>Diabetes</fullName>
                </value>
                <value>
                    <fullName>Diabetology</fullName>
                </value>
                <value>
                    <fullName>Diagnostic Radiology</fullName>
                </value>
                <value>
                    <fullName>Emergency Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Emergency Medicine</fullName>
                </value>
                <value>
                    <fullName>Endocrinology</fullName>
                </value>
                <value>
                    <fullName>Family Medicine</fullName>
                </value>
                <value>
                    <fullName>Family Practice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShipPrimary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ship to Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Specialty__c</fullName>
        <label>Specialty</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Speciality</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Territory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>GraduationYear__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Site_related_Contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SiteRelated</value>
        </filters>
        <label>Site related contacts</label>
    </listViews>
    <listViews>
        <fullName>Sponsor_related_contacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.SponsorRelated</value>
        </filters>
        <label>Sponsor related contacts</label>
    </listViews>
    <recordTypes>
        <fullName>Installer</fullName>
        <active>true</active>
        <label>Installer</label>
    </recordTypes>
    <recordTypes>
        <fullName>SiteRelated</fullName>
        <active>true</active>
        <label>Site Related</label>
    </recordTypes>
    <recordTypes>
        <fullName>SponsorRelated</fullName>
        <active>true</active>
        <label>Sponsor Related</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>